--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -107,7 +107,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Address.cs" />
     <Compile Include="Club.cs" />
+    <Compile Include="Country.cs" />
     <Compile Include="ResponseObject.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
