--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Country.cs" />
     <Compile Include="ResponseObject.cs" />
     <Compile Include="Tournament.cs" />
+    <Compile Include="TournamentState.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Model.rd.xml" />
