--- a/smartchUWP/smartchUWP.csproj
+++ b/smartchUWP/smartchUWP.csproj
@@ -95,7 +95,18 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\DateTimeConverter.cs" />
+    <Compile Include="Converters\DateTimeToDateTimeOffsetConverter.cs" />
+    <Compile Include="Observable\ObservableAddress.cs" />
+    <Compile Include="Observable\ObservableProperty.cs" />
+    <Compile Include="Observable\ObservableTournament.cs" />
+    <Compile Include="Services\EModelClass.cs" />
+    <Compile Include="Services\FrameNavigationService.cs" />
+    <Compile Include="Services\IRootFrame.cs" />
+    <Compile Include="Services\NotificationMessage.cs" />
+    <Compile Include="Services\ObservableProperty.cs" />
     <Compile Include="ViewModel\AddTournamentViewModel.cs" />
+    <Compile Include="ViewModel\MainPageViewModel.cs" />
     <Compile Include="ViewModel\TournamentViewModel.cs" />
     <Compile Include="ViewModel\AddMembreViewModel.cs" />
     <Compile Include="ViewModel\MembresModelView.cs" />
@@ -197,7 +208,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.0.2</Version>
+      <Version>6.0.4</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed">
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="MvvmLight">
       <Version>5.3.0</Version>
