--- a/smartchUWP/smartchUWP.csproj
+++ b/smartchUWP/smartchUWP.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Converters\DateTimeConverter.cs" />
     <Compile Include="Converters\DateTimeToDateTimeOffsetConverter.cs" />
+    <Compile Include="Converters\TournamentStatesConverter.cs" />
     <Compile Include="Observable\ObservableAddress.cs" />
     <Compile Include="Observable\ObservableProperty.cs" />
     <Compile Include="Observable\ObservableTournament.cs" />
