Travail d'hier + Revision de Navigation Services

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Address.cs" />
     <Compile Include="Club.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="EJoueurs.cs" />
     <Compile Include="Match.cs" />
     <Compile Include="MatchsPhases.cs" />
     <Compile Include="MatchState.cs" />
