--- a/smartchUWP/smartchUWP.csproj
+++ b/smartchUWP/smartchUWP.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\DateTimeConverter.cs" />
     <Compile Include="Converters\DateTimeToAgeConverter.cs" />
     <Compile Include="Converters\DateTimeToDateTimeOffsetConverter.cs" />
@@ -177,6 +178,7 @@
     <Content Include="Assets\BadgeLogo.scale-400.png" />
     <Content Include="Assets\images\logo.jpg" />
     <Content Include="Assets\images\user.jpg" />
+    <Content Include="Assets\gifs\ping-loader.gif" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-125.png" />
     <Content Include="Assets\SplashScreen.scale-150.png" />
@@ -274,6 +276,9 @@
     </PackageReference>
     <PackageReference Include="MvvmLight">
       <Version>5.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="XamlAnimatedGif">
+      <Version>1.1.10</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
