Modification seconde session : - Robustesse au coupure réseau (Login & App) : ne plante pas mais pas de message - Début - TournamentViewModel.InitializeAsync : appel d’une seule méthode => inutile. - Les classes Services retournent des ResponseObject et pas des objets du projet. - Respect des conventions C# (-2) : Services.ObservableProperty : paramètre nommé @object.

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -112,11 +112,14 @@
     <Compile Include="Country.cs" />
     <Compile Include="EJoueurs.cs" />
     <Compile Include="ErrorObject.cs" />
+    <Compile Include="ModelException\BadRequestException.cs" />
+    <Compile Include="ModelException\GetDataException.cs" />
+    <Compile Include="ModelException\ServerException.cs" />
     <Compile Include="Match.cs" />
     <Compile Include="MatchsPhases.cs" />
     <Compile Include="MatchState.cs" />
+    <Compile Include="ModelException\ServiceException.cs" />
     <Compile Include="Point.cs" />
-    <Compile Include="ResponseObject.cs" />
     <Compile Include="Score.cs" />
     <Compile Include="Tournament.cs" />
     <Compile Include="TournamentState.cs" />
